3.0.0 (unreleased)
------------------
This is a major release, and contains a number of backwards incompatible
changes to the API.

 - Refactor the settings logic in Zeep. All settings are now configured using
   the zeep.settings.Settings() class.
 - Allow control of defusedxml settings via zeep.Settings (see #567, #391)
 - Skip the xsd:annotation element in the all:element (#737)


2.5.0 (2018-01-06)
------------------
 - Fix AnyType value rendering by guessing the xsd type for the value (#552)
 - Fix AnySimpleType.xmlvalue() not implemented exception (#644)
 - Add __dir__ method to value objects returned by Zeep
 - Don't require content for 201 and 202 status codes (#613)
 - Fix wheel package by cleaning the build directory correctly (#634)
 - Handle Nil values on complexType with SimpleContent elements (#604)
 - Add Client.namespaces method to list all namespaces available
 - Improve support for auto-completion (#537)


2.4.0 (2017-08-26)
------------------
 - Add support for tornado async transport via gen.coroutine (#530, Kateryna Burda)
 - Check if soap:address is defined in the service port instead of raising an
   exception (#527)
 - Update packaging (stop using find_packages()) (#529)
 - Properly handle None values when rendering complex types (#526)
 - Fix generating signature for empty wsdl messages (#542)
 - Support passing strings to xsd:Time objects (#540)


2.3.0 (2017-08-06)
------------------
 - The XML send to the server is no longer using ``pretty_print=True`` (#484)
 - Refactor of the multiref support to fix issues with child elements (#489)
 - Add workaround to support negative durations (#486)
 - Fix creating XML documents for operations without aguments (#479)
 - Fix xsd:extension on xsd:group elements (#523)


2.2.0 (2017-06-19)
------------------
 - Automatically import the soap-encoding schema if it is required (#473)
 - Add support for XOP messages (this is a rewrite of #325 by vashek)


2.1.1 (2017-06-11)
------------------